fix: mobile spacing

--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -15,3 +15,12 @@
 .content h1 {
   margin-bottom: 4rem;
 }
+
+@media (max-width:500px) {
+  .content {
+    padding-top: 18rem;
+  }
+  .content h1 {
+    margin-bottom: 2rem;
+  }
+}
